# budgie-trash-applet

./: README.md  meson.build  org.github.ubuntubudgie.budgie-trash-applet.gresource.xml
src/: Trash.plugin.in  TrashApplet.vala  TrashHandler.vala  TrashStore.vala  meson.build
src/Widgets/: IconButton.vala  MainPopover.vala  SettingsView.vala  TrashItem.vala  TrashStoreWidget.vala
